header and menu adaptiv

--- a/resources/css/components/select-menu.scss
+++ b/resources/css/components/select-menu.scss
@@ -1,6 +1,12 @@
 .select-menu {
   &__label {}
   .itc-select__toggle {}
+
+  &.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+
   &__current {
     position: relative;
     display: -webkit-box;
