--- a/resources/css/layouts/menu.scss
+++ b/resources/css/layouts/menu.scss
@@ -1,27 +1,39 @@
  .menu {
-    height: 70rem;
-    width: 100%;
-    background: $colorSecondaryBackground;
-    position: absolute;
-    top: 10rem;
-    transition: all 0.5s;
-    z-index: 122;
-    left: 50%;
-    transform: translateX(-50%);
-    visibility: hidden;
-    pointer-events: none;
-    opacity: 0;
+   height: 100vh;
+   width: 100%;
+   background: $colorSecondaryBackground;
+   position: absolute;
+   top: $mainSectionPaddingXXL;
+   transition: all 0.5s;
+   z-index: 122;
+   left: 50%;
+   transform: translateX(-50%);
+   visibility: hidden;
+   pointer-events: none;
+   opacity: 0;
+
+   @media only screen and (max-width: $pointMD) {
+   top: $mainSectionPaddingMD;
+   }
 
    &__inner {
      height: 100%;
      padding-bottom: 2rem;
      display: flex;
      justify-content: space-between;
+
+     > * + * {
+       margin-left: 2.5rem;
+     }
+
+     @media only screen and (max-width: $pointMD) {
+       flex-direction: column;
+       max-width: 100%;
+       max-height: 75.5dvh;
+       overflow-y: scroll;
+     }
    }
 
-   &__inner>*+* {
-     margin-left: 2.5rem;
-   }
 
    &__categories-wrapper {
      background-color: $colorWhite;
@@ -29,6 +41,24 @@
      padding: 3.2rem 2.5rem;
      width: 50%;
      height: 100%;
+
+     & .categories-list {
+       flex-wrap: wrap;
+       height: 53.5rem;
+     }
+
+     & li {
+       width: 50%;
+     }
+
+     & li:nth-child(10n) {
+       margin-top: 0;
+     }
+
+     @media only screen and (max-width: $pointMD) {
+       display: none;
+     }
+
    }
 
    &__title {
@@ -36,18 +66,6 @@
      font-weight: 600;
    }
 
-   &__categories-wrapper .categories-list {
-     flex-wrap: wrap;
-     height: 53.5rem;
-   }
-
-   &__categories-wrapper li {
-     width: 50%;
-   }
-
-   &__categories-wrapper li:nth-child(10n) {
-     margin-top: 0;
-   }
 
    /* LIST OF REGIONS */
    &__regions-wrapper {
@@ -55,50 +73,80 @@
      padding-left: 1.4rem;
      width: 25%;
    }
+   .regions-list {
+     a:link,
+     a:visited {
+       font-size: 1.5rem;
+       font-weight: 500;
+       color: inherit;
+     }
 
-   .regions-list a:link,
-   .regions-list a:visited {
-     font-size: 1.5rem;
-     font-weight: 500;
-     color: inherit;
-   }
-
-   .regions-list>*+* {
-     margin-top: 2.8rem;
+     > * + * {
+       margin-top: 2.8rem;
+     }
    }
 
    /* PROMOS LIST */
    &__promos {
      width: 25%;
+
+     @media only screen and (max-width: $pointMD) {
+       display: none;
+     }
+
+     > * + * {
+       margin-top: 2.5rem;
+     }
+
+     li {
+       max-width: 31rem;
+       max-height: 14.6rem;
+     }
+
+     a:link,
+     a:visited {
+       display: block;
+       width: 100%;
+       height: 100%;
+       overflow: hidden;
+     }
+
+     img {
+       object-fit: cover;
+       border: 1px solid $colorBlackOpacity;
+     }
    }
 
-   &__promos>*+* {
-     margin-top: 2.5rem;
-   }
-
-   &__promos li {
-     width: 31rem;
-     height: 14.6rem;
-   }
-
-   &__promos a:link,
-   &__promos a:visited {
-     display: block;
-     width: 100%;
-     height: 100%;
-     overflow: hidden;
-   }
-
-   &__promos img {
-     object-fit: cover;
-     border: 1px solid $colorBlackOpacity;
-   }
 
    &.active {
      visibility: visible;
      pointer-events: all;
      opacity: 1;
+
+     @media only screen and (max-width: $pointMD) {
+       display: block;
+     }
    }
-}
+ }
+
+ .search {
+   &--menu {
+     width: 100%;
+     margin: 0;
+     display: none;
+
+     & .categories-list {
+       padding-inline: 2rem;
+     }
+
+     & .categories-list>li:last-child {
+       padding-bottom: 0;
+     }
+
+      @media only screen and (max-width: $pointMD) {
+        display: block;
+      }
+   }
+ }
 
 
