--- a/resources/css/layouts/aside.scss
+++ b/resources/css/layouts/aside.scss
@@ -5,132 +5,180 @@
   max-height: 60rem;
   margin-right: 1rem;
   background: #fff5ec;
+
+  &__collapse-btn {
+    position: relative;
+    min-height: 2.8rem;
+    margin-right: auto;
+    padding: 0.6rem 1.8rem 0.6rem 3.2rem;
+    background-color: #25313a;
+    font-size: 1.3rem;
+    color: #fff;
+  }
+
+  &__collapse-btn::before {
+    position: absolute;
+    top: 50%;
+    left: 0.4rem;
+    transform: translate(0, -50%);
+    content: "";
+    width: 2rem;
+    height: 2rem;
+    background-image: url('/resources/assets/svg/arrow-left.svg');
+    background-size: contain;
+    background-repeat: no-repeat;
+  }
+
+  &--collapsed,
+  &--expanded {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &--collapsed {
+    justify-content: space-around;
+  }
+
+  &--expanded {
+    position: relative;
+    padding: 2rem;
+    justify-content: flex-start;
+    display: none;
+  }
+
+  &__clear-btn span {
+    position: relative;
+    margin-left: 0.8rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    display: none;
+  }
+
+  &__category-btn {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    min-height: 4rem;
+    padding: 1rem 4rem 1rem 1.5rem;
+    font-size: 1.5rem;
+    font-style: normal;
+    line-height: 1.3;
+    font-weight: 500;
+    color: #7d8797;
+    background-color: #fff;
+    border: none;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+
+    &::after {
+      position: absolute;
+      right: 1rem;
+      flex-shrink: 0;
+      width: 2rem;
+      height: 2rem;
+      margin-left: 1.6rem;
+      background-image: url("/resources/assets/svg/arrow-down.svg");
+      background-size: cover;
+      background-repeat: no-repeat;
+      content: "";
+    }
+
+    &.active::after {
+      transform: rotate(-90deg);
+    }
+  }
+
+  &__label {
+    font-weight: 600;
+    font-size: 1.7rem;
+  }
+
+  &__rating-box {
+    margin-bottom: 2rem;
+  }
+
+  &__toggles {
+    border: none;
+  }
+
+  &__toggles > * + * {
+    margin-top: 2rem;
+  }
+
+  &__toggle-box {
+    min-height: 1.8rem;
+  }
+
+  &__toggle-label {
+    font-family: "Inter", sans-serif;
+    font-weight: 500;
+    font-size: 1.4rem;
+  }
+
+  &__btn {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  &__btn--span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    transform: translate(50%, -50%);
+    width: 2.8rem;
+    height: 2.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #25313a;
+    border-radius: 50%;
+    font-size: 1.4rem;
+    line-height: 1;
+    font-weight: 700;
+    color: #ffffff;
+  }
+
+  &__rating {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__rating img {
+    width: 1.8rem;
+    height: 1.8rem;
+  }
+
+  &__rating p {
+    font-size: 3.6rem;
+    font-weight: 700;
+  }
+
+  .active & {
+    width: 26rem;
+    max-height: 80rem;
+  }
+
+  .active &--collapsed {
+    display: none;
+  }
+
+  .active &--expanded {
+    display: block;
+  }
 }
 
-.aside--collapsed,
-.aside--expanded {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+#filter_area_button,
+#filter_subway_button {
+  text-align: left;
 }
 
-.aside--collapsed {
-  justify-content: space-around;
-}
-
-.aside--expanded {
-  position: relative;
-  padding: 2rem;
-  justify-content: flex-start;
-  display: none;
-}
-
-.filter__collapse-btn {
-  position: relative;
-  min-height: 2.8rem;
-  margin-right: auto;
-  padding: 0.6rem 1.8rem 0.6rem 3.2rem;
-  background-color: #25313a;
-  font-size: 1.3rem;
-  color: #fff;
-}
-
-.filter__collapse-btn::before {
-  position: absolute;
-  top: 50%;
-  left: 0.4rem;
-  transform: translate(0, -50%);
-  content: "";
-  width: 2rem;
-  height: 2rem;
-  background-image: url('/resources/assets/svg/arrow-left.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.aside-clear-btn span {
-  position: relative;
-  margin-left: 0.8rem;
-  font-size: 1.5rem;
-  font-weight: 600;
-  display: none;
-}
-
-.aside-label {
-  font-weight: 600;
-  font-size: 1.7rem;
-}
-
-.aside-rating-box {
-  margin-bottom: 2rem;
-}
-
-.aside-toggles>*+* {
-  margin-top: 2rem;
-}
-
-.aside-toggle-box {
-  min-height: 1.8rem;
-}
-
-.aside-toggle-label {
-  font-family: "Inter", sans-serif;
-  font-weight: 500;
-  font-size: 1.4rem;
-}
-
-.aside-btn {
-  width: 3rem;
-  height: 3rem;
-}
-
-.aside-btn--span {
-  position: absolute;
-  top: 0;
-  right: 0;
-  transform: translate(50%, -50%);
-  width: 2.8rem;
-  height: 2.8rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: #25313a;
-  border-radius: 50%;
-  font-size: 1.4rem;
-  line-height: 1;
-  font-weight: 700;
-  color: #ffffff;
-}
-
-.aside-ratig {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.aside-ratig img {
-  width: 1.8rem;
-  height: 1.8rem;
-}
-
-.aside-ratig p {
-  font-size: 3.6rem;
-  font-weight: 700;
-}
-
-.active .aside {
-  width: 26rem;
-  max-height: 80rem;
-}
-
-.active .aside--collapsed {
-  display: none;
-}
-
-.active .aside--expanded {
-  display: block;
-}
 
 
