--- a/resources/css/layouts/shop-list.scss
+++ b/resources/css/layouts/shop-list.scss
@@ -3,34 +3,30 @@
 .shop-list {
   width: 100%;
   max-width: 60rem;
-  height: 77rem;
+  height: 81rem;
   position: relative;
   overflow-y: auto;
   transition: height 0.5s;
-}
 
-.shop-list.expanded {
-  height: 216rem;
-}
+  &.active {
+    display: none;
+  }
 
-.active .shop-list {
-  display: none;
-}
+  .active &-more {
+    display: none;
+  }
 
-.active .shop-list-more {
-  display: none;
-}
-.shop-list-more>span{
-  transition: all 0.3s ease-in;
-}
+  &-more > span{
+    transition: all 0.3s ease-in;
 
-.expanded.shop-list-more>span::before{
-  display: none;
-}
+    .expanded > span::before{
+      display: none;
+    }
 
-.expanded.shop-list-more>span{
-  margin-right: 3rem;
+    .expanded > span {
+      margin-right: 3rem;
+    }
+  }
 }
-
 
 
