--- a/resources/css/variables.scss
+++ b/resources/css/variables.scss
@@ -20,4 +20,12 @@ $color_7: #f6f6f6;
 
 $shadow: 0 5px 50px rgba(0, 0, 0, 0.15);
 
+$pointXL: 75em;
+$pointLG: 62.25em;
+$pointMD: 56.25em;
+// $pointMD:
+//
+//
+$mainSectionPaddingXXL: 10rem;
+$mainSectionPaddingMD: 7rem;
 
