--- a/resources/css/components/button.scss
+++ b/resources/css/components/button.scss
@@ -19,6 +19,33 @@
     background: $colorSecondary;
   }
 
+  &--close {
+    position: relative;
+    width: 3rem;
+    height: 3rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      display: inline-block;
+      width: 100%;
+      height: 2px;
+      background-color: $color_4;
+    }
+
+    &::before {
+      transform: rotate(45deg);
+    }
+
+    &::after {
+      transform: rotate(-45deg);
+    }
+  }
+
   &:disabled {
     cursor: auto;
   }
