--- a/resources/css/global.scss
+++ b/resources/css/global.scss
@@ -7,4 +7,9 @@
 @import "./layouts/category-list.scss";
 @import "./layouts/search.scss";
 
+.accordion {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
