--- a/resources/css/pages/home.scss
+++ b/resources/css/pages/home.scss
@@ -8,10 +8,13 @@
   background-color: #ededed !important;
   position: relative;
 
-
   &__wrapper {
     display: flex;
     padding-bottom: 10rem;
+
+    @media only screen and (max-width: $pointMD) {
+      padding-bottom: 0;
+    }
   }
 
   &__map {
@@ -80,9 +83,9 @@
   }
 }
 
-
-.correct.flex-ctr {
-  max-height: 813px;
+.search--filter .categories-list {
+  @media only screen and (max-width: $pointMD) {
+    padding: 2rem;
+  }
 }
-
 
