--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -635,301 +635,95 @@
   transform: translateY(-50%) rotate(180deg);
 }
 
-.accordion {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
 
-.accordion--brands {
-  height: 50rem;
-  overflow: hidden;
-  transition: height 0.5s;
-}
-
-.accordion--brands>*+* {
-  margin-top: 1rem;
-}
-
-.accordion__item--brands {
-  background-color: #ffffff;
-}
-
-.accordion__checkbox {
-  position: fixed;
-  width: 1px;
-  height: 1px;
-  clip-path: inset(50%);
-  overflow: hidden;
-  white-space: nowrap;
-}
-
-.accordion__body.open {
-  grid-template-rows: 1fr;
-}
-
-.accordion__checkbox:checked~.accordion__body {
-  grid-template-rows: 1fr;
-}
-
-.accordion__checkbox:checked~.accordion__header--brands::after {
-  mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-  background-color: #25313a;
-}
-
-.accordion__header {
-  position: relative;
-  display: block;
-  cursor: pointer;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  user-select: none;
-}
-
-.accordion__header--brands {
-  --icon-size: 2rem;
-  --padding-inline: 2.5rem;
-  --padding-block: 3.5rem;
-  padding: var(--padding-block) var(--padding-inline);
-  padding-right: calc((var(--padding-inline) * 2) + var(--icon-size));
-  font-size: 2.7rem;
-  line-height: 1.4rem;
-  font-weight: 600;
-}
-
-.accordion__header--brands::after {
-  content: "";
-  position: absolute;
-  top: 50%;
-  right: var(--padding-inline);
-  width: var(--icon-size);
-  height: var(--icon-size);
-  margin-top: calc(var(--icon-size) / -2);
-  mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10 13.7633V7.09668' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-  -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10 13.7633V7.09668' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A");
-  mask-size: 100%;
-  -webkit-mask-size: 100%;
-  background-color: #7d8797;
-}
-
-.accordion__header--categories {
-  display: flex;
-  align-items: center;
-}
-.accordion__categories__into{
-  display: block !important;
-  margin-left: auto !important;
-  padding: 0;
-  background: none !important;
-  margin-right: 0 !important;
-  cursor: pointer;
-  transition: all 0.3s linear;
-  border: none;
-}
-
-.accordion__categories__into:hover{
-  transform: scale(1.15);
-}
-.accordion__categories__into svg {
-  pointer-events: none;
-}
-.accordion__body {
-  display: grid;
-  grid-template-rows: 0fr;
-  transition: grid-template-rows 200ms ease;
-}
-
-.accordion__body--categories {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  background-color: #ffffff;
-  z-index: 2;
-}
-
-.accordion__body-inner {
-  overflow: hidden;
-  position: relative;
-}
-
-.accordion__body-inner--brands-2 {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 0 8rem 4rem 3rem;
-  background-color: #fff;
-  display: none;
-}
-
-.accordion__body-content--brands {
-  padding: 0 8rem 4rem 3rem;
-}
-
-.accordion__body-content--categories {
-  padding: 0 0 1rem 2rem;
-}
-
-.accordion__body-content--categories--search {
-  padding: 0;
-}
-
-.accordion__body-content--categories--search .brands-list {
-  padding-top: 2rem;
-  padding-left: 2rem;
-}
-
-.accordion__breadcrumbs {
-  width: 100%;
-  display: flex;
-  margin-bottom: 2rem;
-  min-height: 2rem;
-  align-items: center;
-}
-
-.accordion__breadcrumbs * {
-  flex-shrink: 0;
-}
-
-.accordion__breadcrumbs>*+* {
-  margin-left: 2rem;
-}
-
-.accordion__breadcrumbs--search {
-  margin: 0 !important;
-  padding: 0 !important;
-  display: flex !important;
-  flex-direction: row !important;
-  align-items: center !important;
-  height: 5rem !important;
-  border-bottom: 1px solid #d9d9d9;
-  padding-left: 2rem !important;
-}
-
-.accordion__breadcrumbs-btn {
-  position: relative;
-  padding-left: 3rem;
-  font-size: 1.2rem;
-  line-height: 1.4rem;
-  font-weight: 600;
-}
-
-.accordion__breadcrumbs-btn::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-  width: 2rem;
-  height: 2rem;
-  background-image: url('/resources/assets/svg/arrow-square-left.svg');
-  background-size: contain;
-  background-repeat: no-repeat;
-}
-
-.accordion__body--brands.open .accordion__body-inner--brands-2 {
-  display: block;
-}
-
-.accordion__body--brands.open .accordion__body-content--brands {
-  padding: 0 8rem 8rem 3rem;
-}
-
-.accordion__body--brands.open .brands-list--main {
-  opacity: 0;
-}
-
-.brands-list {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1.95rem 6rem;
-}
-
-.brands-list--main li {
-  cursor: pointer;
-}
-
-.brands-list--categories {
-  position: relative;
-  grid-template-columns: repeat(1, 1fr);
-  gap: 1.8rem;
-  height: 58.3rem;
-  overflow-y: auto;
-}
-
-.brands-list--categories .brands-list__item {
-  display: flex;
-  align-items: center;
-}
-
-.brands-list--categories li.brands-list__item:last-child {
-  margin-bottom: 0;
-}
-
-.brands-list__item {
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-}
-
-.brands-list__icon {
-  --el-size: 4rem;
-  width: var(--el-size);
-  height: var(--el-size);
-  margin-right: 2rem;
-  border-radius: 1rem;
-  background-color: var(--color-secondary);
-  flex-shrink: 0;
-  transition: all 0.2s linear;
-}
-.active__brand.brands-list__item>.brands-list__icon{
-  background-color: var(--color-primary);
-}
-
-.brands-list__info {
-  font-weight: 600;
-  line-height: 2rem;
-  pointer-events: none;
-}
-
-.brands-list__brand {
-  font-size: 1.7rem;
-  pointer-events: none;
-}
-
-.brands-list__price {
-  font-size: 1.5rem;
-}
-
-.brands-list__more-btn {
-  margin-top: 3rem;
-  font-size: 1.4rem;
-  line-height: 1;
-  font-weight: 600;
-  padding-left: 3rem;
-}
-
-.brands-list__more-btn::before {
-  --el-size: 2rem;
-  content: "";
-  position: absolute;
-  width: var(--el-size);
-  height: var(--el-size);
-  background-image: url("/resources/assets/svg/arrow-square-down.svg");
-  background-size: contain;
-  background-repeat: no-repeat;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 0;
-  transition: all 0.5s;
-}
-
-.brands-list__more-btn.active::before {
-  transform: translateY(-50%) rotate(-180deg);
-}
+/* .brands-list { */
+/*   display: grid; */
+/*   grid-template-columns: repeat(3, 1fr); */
+/*   gap: 1.95rem 6rem; */
+/* } */
+/*  */
+/* .brands-list--main li { */
+/*   cursor: pointer; */
+/* } */
+/*  */
+/* .brands-list--categories { */
+/*   position: relative; */
+/*   grid-template-columns: repeat(1, 1fr); */
+/*   gap: 1.8rem; */
+/*   height: 58.3rem; */
+/*   overflow-y: auto; */
+/* } */
+/*  */
+/* .brands-list--categories .brands-list__item { */
+/*   display: flex; */
+/*   align-items: center; */
+/* } */
+/*  */
+/* .brands-list--categories li.brands-list__item:last-child { */
+/*   margin-bottom: 0; */
+/* } */
+/*  */
+/* .brands-list__item { */
+/*   display: flex; */
+/*   align-items: center; */
+/*   cursor: pointer; */
+/* } */
+/*  */
+/* .brands-list__icon { */
+/*   --el-size: 4rem; */
+/*   width: var(--el-size); */
+/*   height: var(--el-size); */
+/*   margin-right: 2rem; */
+/*   border-radius: 1rem; */
+/*   background-color: var(--color-secondary); */
+/*   flex-shrink: 0; */
+/*   transition: all 0.2s linear; */
+/* } */
+/* .active__brand.brands-list__item>.brands-list__icon{ */
+/*   background-color: var(--color-primary); */
+/* } */
+/*  */
+/* .brands-list__info { */
+/*   font-weight: 600; */
+/*   line-height: 2rem; */
+/*   pointer-events: none; */
+/* } */
+/*  */
+/* .brands-list__brand { */
+/*   font-size: 1.7rem; */
+/*   pointer-events: none; */
+/* } */
+/*  */
+/* .brands-list__price { */
+/*   font-size: 1.5rem; */
+/* } */
+/*  */
+/* .brands-list__more-btn { */
+/*   margin-top: 3rem; */
+/*   font-size: 1.4rem; */
+/*   line-height: 1; */
+/*   font-weight: 600; */
+/*   padding-left: 3rem; */
+/* } */
+/*  */
+/* .brands-list__more-btn::before { */
+/*   --el-size: 2rem; */
+/*   content: ""; */
+/*   position: absolute; */
+/*   width: var(--el-size); */
+/*   height: var(--el-size); */
+/*   background-image: url("/resources/assets/svg/arrow-square-down.svg"); */
+/*   background-size: contain; */
+/*   background-repeat: no-repeat; */
+/*   top: 50%; */
+/*   transform: translateY(-50%); */
+/*   left: 0; */
+/*   transition: all 0.5s; */
+/* } */
+/*  */
+/* .brands-list__more-btn.active::before { */
+/*   transform: translateY(-50%) rotate(-180deg); */
+/* } */
 
 .testimonials-section {
   padding-top: 6rem;
