--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -609,33 +609,239 @@
   background-color: var(--color-primary);
 }
 
-.brands-section {
-  background-color: #ffffff;
-  position: relative;
-  z-index: 2;
-}
+/* .brands-section { */
+/*   background-color: #ffffff; */
+/*   position: relative; */
+/*   z-index: 2; */
+/* } */
+/*  */
+/* .brands__container { */
+/*   padding: 5.8rem 6.5rem 4.8rem 6.5rem; */
+/*   background-color: var(--greylight); */
+/* } */
+/*  */
+/* .brands__heading { */
+/*   margin-bottom: 5rem; */
+/*   font-size: 3.7rem; */
+/*   line-height: 1.4rem; */
+/*   font-weight: 600; */
+/* } */
+/*  */
+/* .brands__content.expanded .accordion--brands { */
+/*   height: fit-content; */
+/* } */
+/*  */
+/* .brands__content.expanded .brands-list__more-btn::before { */
+/*   transform: translateY(-50%) rotate(180deg); */
+/* } */
 
-.brands__container {
-  padding: 5.8rem 6.5rem 4.8rem 6.5rem;
-  background-color: var(--greylight);
-}
-
-.brands__heading {
-  margin-bottom: 5rem;
-  font-size: 3.7rem;
-  line-height: 1.4rem;
-  font-weight: 600;
-}
-
-.brands__content.expanded .accordion--brands {
-  height: fit-content;
-}
-
-.brands__content.expanded .brands-list__more-btn::before {
-  transform: translateY(-50%) rotate(180deg);
-}
-
-
+/* .accordion { */
+/*   list-style: none; */
+/*   padding: 0; */
+/*   margin: 0; */
+/* } */
+/*  */
+/* .accordion--brands { */
+/*   height: 50rem; */
+/*   overflow: hidden; */
+/*   transition: height 0.5s; */
+/* } */
+/*  */
+/* .accordion--brands>*+* { */
+/*   margin-top: 1rem; */
+/* } */
+/*  */
+/* .accordion__item--brands { */
+/*   background-color: #ffffff; */
+/* } */
+/*  */
+/* .accordion__checkbox { */
+/*   position: fixed; */
+/*   width: 1px; */
+/*   height: 1px; */
+/*   clip-path: inset(50%); */
+/*   overflow: hidden; */
+/*   white-space: nowrap; */
+/* } */
+/*  */
+/* .accordion__body.open { */
+/*   grid-template-rows: 1fr; */
+/* } */
+/*  */
+/* .accordion__checkbox:checked~.accordion__body { */
+/*   grid-template-rows: 1fr; */
+/* } */
+/*  */
+/* .accordion__checkbox:checked~.accordion__header--brands::after { */
+/*   mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"); */
+/*   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%2325313A' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E"); */
+/*   background-color: #25313a; */
+/* } */
+/*  */
+/* .accordion__header { */
+/*   position: relative; */
+/*   display: block; */
+/*   cursor: pointer; */
+/*   white-space: nowrap; */
+/*   overflow: hidden; */
+/*   text-overflow: ellipsis; */
+/*   user-select: none; */
+/* } */
+/*  */
+/* .accordion__header--brands { */
+/*   --icon-size: 2rem; */
+/*   --padding-inline: 2.5rem; */
+/*   --padding-block: 3.5rem; */
+/*   padding: var(--padding-block) var(--padding-inline); */
+/*   padding-right: calc((var(--padding-inline) * 2) + var(--icon-size)); */
+/*   font-size: 2.7rem; */
+/*   line-height: 1.4rem; */
+/*   font-weight: 600; */
+/* } */
+/*  */
+/* .accordion__header--brands::after { */
+/*   content: ""; */
+/*   position: absolute; */
+/*   top: 50%; */
+/*   right: var(--padding-inline); */
+/*   width: var(--icon-size); */
+/*   height: var(--icon-size); */
+/*   margin-top: calc(var(--icon-size) / -2); */
+/*   mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10 13.7633V7.09668' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A"); */
+/*   -webkit-mask-image: url("data:image/svg+xml,%3Csvg width='20' height='21' viewBox='0 0 20 21' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6.6665 10.4302H13.3332' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M10 13.7633V7.09668' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M7.49984 18.7633H12.4998C16.6665 18.7633 18.3332 17.0967 18.3332 12.93V7.93001C18.3332 3.76335 16.6665 2.09668 12.4998 2.09668H7.49984C3.33317 2.09668 1.6665 3.76335 1.6665 7.93001V12.93C1.6665 17.0967 3.33317 18.7633 7.49984 18.7633Z' stroke='%237D8797' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A"); */
+/*   mask-size: 100%; */
+/*   -webkit-mask-size: 100%; */
+/*   background-color: #7d8797; */
+/* } */
+/*  */
+/* .accordion__header--categories { */
+/*   display: flex; */
+/*   align-items: center; */
+/* } */
+/* .accordion__categories__into{ */
+/*   display: block !important; */
+/*   margin-left: auto !important; */
+/*   padding: 0; */
+/*   background: none !important; */
+/*   margin-right: 0 !important; */
+/*   cursor: pointer; */
+/*   transition: all 0.3s linear; */
+/*   border: none; */
+/* } */
+/*  */
+/* .accordion__categories__into:hover{ */
+/*   transform: scale(1.15); */
+/* } */
+/* .accordion__categories__into svg { */
+/*   pointer-events: none; */
+/* } */
+/* .accordion__body { */
+/*   display: grid; */
+/*   grid-template-rows: 0fr; */
+/*   transition: grid-template-rows 200ms ease; */
+/* } */
+/*  */
+/* .accordion__body--categories { */
+/*   position: absolute; */
+/*   top: 0; */
+/*   left: 0; */
+/*   width: 100%; */
+/*   background-color: #ffffff; */
+/*   z-index: 2; */
+/* } */
+/*  */
+/* .accordion__body-inner { */
+/*   overflow: hidden; */
+/*   position: relative; */
+/* } */
+/*  */
+/* .accordion__body-inner--brands-2 { */
+/*   position: absolute; */
+/*   top: 0; */
+/*   left: 0; */
+/*   width: 100%; */
+/*   padding: 0 8rem 4rem 3rem; */
+/*   background-color: #fff; */
+/*   display: none; */
+/* } */
+/*  */
+/* .accordion__body-content--brands { */
+/*   padding: 0 8rem 4rem 3rem; */
+/* } */
+/*  */
+/* .accordion__body-content--categories { */
+/*   padding: 0 0 1rem 2rem; */
+/* } */
+/*  */
+/* .accordion__body-content--categories--search { */
+/*   padding: 0; */
+/* } */
+/*  */
+/* .accordion__body-content--categories--search .brands-list { */
+/*   padding-top: 2rem; */
+/*   padding-left: 2rem; */
+/* } */
+/*  */
+/* .accordion__breadcrumbs { */
+/*   width: 100%; */
+/*   display: flex; */
+/*   margin-bottom: 2rem; */
+/*   min-height: 2rem; */
+/*   align-items: center; */
+/* } */
+/*  */
+/* .accordion__breadcrumbs * { */
+/*   flex-shrink: 0; */
+/* } */
+/*  */
+/* .accordion__breadcrumbs>*+* { */
+/*   margin-left: 2rem; */
+/* } */
+/*  */
+/* .accordion__breadcrumbs--search { */
+/*   margin: 0 !important; */
+/*   padding: 0 !important; */
+/*   display: flex !important; */
+/*   flex-direction: row !important; */
+/*   align-items: center !important; */
+/*   height: 5rem !important; */
+/*   border-bottom: 1px solid #d9d9d9; */
+/*   padding-left: 2rem !important; */
+/* } */
+/*  */
+/* .accordion__breadcrumbs-btn { */
+/*   position: relative; */
+/*   padding-left: 3rem; */
+/*   font-size: 1.2rem; */
+/*   line-height: 1.4rem; */
+/*   font-weight: 600; */
+/* } */
+/*  */
+/* .accordion__breadcrumbs-btn::before { */
+/*   content: ""; */
+/*   position: absolute; */
+/*   top: 50%; */
+/*   left: 0; */
+/*   transform: translateY(-50%); */
+/*   width: 2rem; */
+/*   height: 2rem; */
+/*   background-image: url('/resources/assets/svg/arrow-square-left.svg'); */
+/*   background-size: contain; */
+/*   background-repeat: no-repeat; */
+/* } */
+/*  */
+/* .accordion__body--brands.open .accordion__body-inner--brands-2 { */
+/*   display: block; */
+/* } */
+/*  */
+/* .accordion__body--brands.open .accordion__body-content--brands { */
+/*   padding: 0 8rem 8rem 3rem; */
+/* } */
+/*  */
+/* .accordion__body--brands.open .brands-list--main { */
+/*   opacity: 0; */
+/* } */
+/*  */
 /* .brands-list { */
 /*   display: grid; */
 /*   grid-template-columns: repeat(3, 1fr); */
