--- a/resources/css/components/display-rating.scss
+++ b/resources/css/components/display-rating.scss
@@ -1,17 +1,18 @@
 .display-rating {
   display: flex;
   margin-bottom: 0.5rem;
+  font-size: 10.5px;
 
   &__count {
     margin-right: 1rem;
-    font-size: 3.6rem;
+    font-size: 3em;
     font-weight: 700;
     color: $colorMainBackground;
-  }
 
-  &--25 &__count {
-    margin-right: 2rem;
-    font-size: 5.6rem;
+    @media only screen and (max-width: $pointMD) {
+      margin-right: 0.5rem;
+      font-size: 2.5em;
+    }
   }
 }
 
