--- a/resources/css/layouts/shop-card.scss
+++ b/resources/css/layouts/shop-card.scss
@@ -12,6 +12,11 @@
   transition: all 0.5s;
   border: 3px solid transparent;
 
+  @media only screen and (max-width: $pointMD) {
+    flex-direction: column;
+    border-width: 1px;
+  }
+
   &.active::after {
     content: '';
     position: absolute;
@@ -29,7 +34,7 @@
   }
 
   &.show {
-    border: 3px solid $colorSecondary;
+    border-color: $colorSecondary;
   }
 
   &__content {
@@ -38,6 +43,12 @@
     display: flex;
     flex-direction: column;
     border-right: 1px solid $colorGrey;
+
+    @media only screen and (max-width: $pointMD) {
+      padding:1.5rem;
+      padding-bottom: 0;
+      border: none;
+    }
   }
 
   &__header {
@@ -68,6 +79,10 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+
+    @media only screen and (max-width: $pointMD) {
+      margin-bottom: 0.5rem;
+    }
   }
 
   // .active & {
@@ -109,6 +124,10 @@
     -webkit-line-clamp: 4;
     text-overflow: ellipsis;
     overflow: hidden;
+
+    @media only screen and (max-width: $pointMD) {
+      margin: 0;
+    }
   }
 
   &__action {
@@ -127,6 +146,10 @@
     @media only screen and (max-width: $pointXL) {
       font-size: 1.4rem;
     }
+
+    @media only screen and (max-width: $pointMD) {
+      display: none;
+    }
   }
 
   &__contacts {
@@ -135,37 +158,71 @@
     align-items: center;
     justify-content: space-between;
     padding: 3.2rem 2rem;
+
+    @media only screen and (max-width: $pointMD) {
+      padding: 1.5rem;
+      flex-direction: row;
+
+      > * + * {
+        margin-left: 4.5rem;
+      }
+    }
+
+    @media only screen and (max-width: $pointXS) {
+      display: grid;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      justify-items: center;
+      align-items: center;
+      row-gap: 1rem;
+
+      > * + * {
+        margin-left: 0;
+      }
+    }
   }
 
   &__contact {
     display: block;
     width: 2.4rem;
     height: 2.4rem;
+
+    @media only screen and (max-width: $pointXS) {
+      &:first-child {
+        grid-row: 1 / span 3;
+      }
+    }
+
+    &--mobile-btn {
+      width: auto;
+      padding-left: 3.4rem;
+      position: relative;
+      color: $colorSecondary;
+      margin-right: auto;
+      font-weight: 600;
+      font-size: 1.5rem;
+      display: none;
+
+    @media only screen and (max-width: $pointMD) {
+      display: flex;
+    }
+
+      &::before {
+        content: "";
+        width: 2.4rem;
+        height: 2.4rem;
+        position: absolute;
+        background-image: url("data:image/svg+xml,%3Csvg width='21' height='20' viewBox='0 0 21 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.8332 1.66667H7.1665C3.83317 1.66667 2.1665 3.33334 2.1665 6.66667V17.5C2.1665 17.9583 2.5415 18.3333 2.99984 18.3333H13.8332C17.1665 18.3333 18.8332 16.6667 18.8332 13.3333V6.66667C18.8332 3.33334 17.1665 1.66667 13.8332 1.66667Z' stroke='%233d39fc' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6.3335 7.91667H14.6668' stroke='%233d39fc' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6.3335 12.0833H12.1668' stroke='%233d39fc' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
+        background-size: cover;
+        background-repeat: no-repeat;
+        top: 50%;
+        transform: translateY(-50%);
+        left: 0rem;
+      }
+    }
   }
 
-  &__contact--mobile-btn {
-    width: auto;
-    padding-left: 3.4rem;
-    position: relative;
-    color: $colorSecondary;
-    margin-right: auto;
-    font-weight: 600;
-    font-size: 1.5rem;
-    display: none;
-  }
 
-  &__contact--mobile-btn::before {
-    content: "";
-    width: 2.4rem;
-    height: 2.4rem;
-    position: absolute;
-    background-image: url("data:image/svg+xml,%3Csvg width='21' height='20' viewBox='0 0 21 20' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M13.8332 1.66667H7.1665C3.83317 1.66667 2.1665 3.33334 2.1665 6.66667V17.5C2.1665 17.9583 2.5415 18.3333 2.99984 18.3333H13.8332C17.1665 18.3333 18.8332 16.6667 18.8332 13.3333V6.66667C18.8332 3.33334 17.1665 1.66667 13.8332 1.66667Z' stroke='%233d39fc' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6.3335 7.91667H14.6668' stroke='%233d39fc' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3Cpath d='M6.3335 12.0833H12.1668' stroke='%233d39fc' stroke-width='2' stroke-miterlimit='10' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E");
-    background-size: cover;
-    background-repeat: no-repeat;
-    top: 50%;
-    transform: translateY(-50%);
-    left: 0rem;
-  }
 
   &__show-location {
     background-color: transparent;
@@ -181,3 +238,5 @@
     stroke: $colorSecondary;
   }
 }
+
+
