--- a/resources/css/layouts/shop-card.scss
+++ b/resources/css/layouts/shop-card.scss
@@ -157,7 +157,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    padding: 3.2rem 2rem;
+    padding: 2rem;
 
     @media only screen and (max-width: $pointMD) {
       padding: 1.5rem;
