--- a/resources/css/layouts/similar-location.scss
+++ b/resources/css/layouts/similar-location.scss
@@ -1,12 +1,16 @@
 .similar-regions {
-  & {
-    max-width: 50em;
-    flex-shrink: 0;
-  }
+  max-width: 50em;
+  flex-shrink: 0;
 
-  &>a:link,
-  &>a:visited {
+  & a:link,
+  & a:visited {
     margin-bottom: 2rem;
+
+    @media only screen and (max-width: $pointMD) {
+      padding: 1rem 1.4rem;
+      font-size: 1.5rem;
+      margin-bottom: 0.2rem;
+    }
   }
 
   & a:link {
@@ -27,6 +31,8 @@
     color: inherit;
   }
 
+
+
   &__list {
     margin-bottom: 1.8rem;
     height: 12.1rem;
@@ -36,9 +42,16 @@
     column-gap: 1.8rem;
     overflow: hidden;
     transition: height 0.5s;
+
+    @media only screen and (max-width: $pointMD) {
+      grid-template-columns: 1fr;
+      margin-bottom: 1rem;
+    }
   }
 
   .active &__list {
     height: max-content;
   }
 }
+
+
