--- a/resources/css/utility.scss
+++ b/resources/css/utility.scss
@@ -2,6 +2,10 @@
   width: 124rem;
   max-width: 86vw;
   margin: 0 auto;
+
+  @media only screen and (max-width: $pointMD) {
+    max-width: calc(100vw - 4rem);
+  }
 }
 
 .container-wide {
