--- a/resources/css/pages/home.scss
+++ b/resources/css/pages/home.scss
@@ -50,6 +50,11 @@
       margin: 0;
       z-index: -1;
       box-shadow: 0 5px 50px rgba(0, 0, 0, 0.15);
+
+      .map-open & {
+        z-index: 1;
+        position: fixed;
+      }
     }
   }
 
@@ -185,8 +190,9 @@
       }
     }
 
-    &--places {
-      margin-right: 1.2rem;
+    &--map {
+      width: 4rem;
+      height: 4rem;
 
       svg {
         width: 20px;
@@ -196,12 +202,20 @@
           stroke: #B4E040;
         }
       }
-    }
 
-    &--places,
-    &--map {
-      width: 4rem;
-      height: 4rem;
+
+      .mobile-nav-section__icon--places {
+        display: none;
+      }
+
+      &.active {
+        .mobile-nav-section__icon--map {
+          display: none;
+        }
+        .mobile-nav-section__icon--places {
+          display: inline-block;
+        }
+      }
     }
   }
 }
