--- a/resources/css/components/button.scss
+++ b/resources/css/components/button.scss
@@ -1,4 +1,5 @@
 .btn {
+  //MAIN SITE`S BUTTONS
   position: relative;
   display: flex;
   justify-content: center;
@@ -10,6 +11,14 @@
   outline: none;
   font-family: inherit;
   color: inherit;
+
+  &:disabled {
+    cursor: auto;
+  }
+
+  &__disabled {
+    display: none;
+  }
 
   &--primary {
     background: $colorPrimary;
@@ -46,12 +55,24 @@
     }
   }
 
-  &:disabled {
-    cursor: auto;
-  }
 
-  &__disabled {
-    display: none;
+  // NAVIGATION BUTTONS
+  &.previous,
+  &.forwards {
+    padding: 1rem 2rem;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    border: 0;
+    border-radius: 32rem;
+    background: $colorWhite;
+    font-size: 1rem;
+    color: $colorPrimary;
+    cursor: pointer;
+
+    * {
+      pointer-events: none;
+    }
   }
 }
 
